trunk/Archive2/13/bc1e3d1e773801/output
main.cpp: In instantiation of 'main(int, char**)::<lambda(auto:1)> [with auto:1 = main(int, char**)::<lambda(auto:1)>]':
main.cpp:3:8:   required from here
main.cpp:2:37: error: use of 'main(int, char**)::<lambda(auto:1)> [with auto:1 = main(int, char**)::<lambda(auto:1)>]' before deduction of 'auto'
     auto x = [](auto f) { return f(f); };
                                     ^
main.cpp:2:37: error: invalid use of 'auto'
