trunk/Archive2/13/bc1e3d1e773801/main.cpp
int main(int argc, char** argv) {
    auto x = [](auto f) { return f(f); };
    x(x);
    
    return 0;
}
